syntax = "proto3";

option go_package = "./notification";

package notification;

// The Donuts notification service definition.
service DonutsNotifier {
    // Sends a new donut notification
    rpc NewDonutArriveNotification (NewDonutNotificationRequest) returns (NewDonutNotificationResponse) {}
    rpc ListDonutsNotifications (stream ListDonutsNotificationsRequest) returns (stream NewDonutNotificationResponse) {}
}

message NewDonutNotificationRequest {
    string message = 1;
}

message NewDonutNotificationResponse {
    string message = 1;
}

message ListDonutsNotificationsRequest {

}